--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -42,7 +42,6 @@
 
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
-  <script type='text/javascript' src='js/ui-loader.js'></script>
   <script type='text/javascript' src='js/message-manager.js'></script>
   <script type='text/javascript' src="js/cockpit.js"></script>
   <script type='text/javascript' src="config.js"></script>
@@ -56,7 +55,7 @@
     window.Polymer.dom = 'shadow';
   </script>
   <link rel="import" href="components/polymer/polymer.html">
-  <link rel="import" href="js/orov-behavior.html"> <!--for orov webcontrols -->
+  <link rel="import" href="components/orov-behavior.html"> <!--for orov webcontrols -->
 
   <link rel="import" href="components/new-ui/time.html">
   <link rel="import" href="components/new-ui/compass.html">
