--- a/src/plugins/new-ui/popup.ejs
+++ b/src/plugins/new-ui/popup.ejs
@@ -14,7 +14,7 @@
     window.Polymer.dom = 'shadow';
   </script>
   <link rel="import" href="../components/polymer/polymer.html">
-  <link rel="import" href="../js/orov-behavior.html"> <!--for orov webcontrols -->
+  <link rel="import" href="../components/orov-behavior.html"> <!--for orov webcontrols -->
 
 
   <link rel="import" href="<%= webComponent %>">
