--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -133,7 +133,7 @@
 
 
 
- <script type="text/javascript" src="js/widget-layout-manager.js"></script>
+ <script type="text/javascript" src="widget-layout-manager.js"></script>
 
 
 </body>
