--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -64,7 +64,7 @@
   <link rel="import" href="components/new-ui/switches.html">
   <link rel="import" href="components/new-ui/power.html">
   <link rel="import" href="components/diagnostics/diagnostics.html">
-  <link rel="import" href="components/video/video.html">
+  <link rel="import" href="components/mjpeg-video-webcomponents/mjpeg-video.html">
   <link rel="import" href="components/navigation-data/orov-horizon.html">
   <link rel="import" href="components/ping.html">
 
@@ -100,7 +100,7 @@
           <div id="mainContent">
             <bb-ping></bb-ping>
             <div id="newuiVideo" class="full-height">
-              <rov-video id="videoElement"></rov-video>
+              <mjpeg-video id="camera1" border='1' style='width: 100%; height:100%' menuState='on' src={{video_source}}></mjpeg-video>
               <orov-horizon id="horizon" event-emitter="{{cockpit-event-emitter}}"></orov-horizon>
             </div>
             <div id="newuiControlpad">
