--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -93,6 +93,8 @@
  <script type='text/javascript' src="socket.io/socket.io.js"></script>
 
   <script type='text/javascript' src='js/message-manager.js'></script>
+  <script type='text/javascript' src='js/eventEmitterStoreAndForward.js'></script>
+  <script type='text/javascript' src='js/SocketIOStoreAndForward.js'></script>
  <script type="text/javascript" src="js/cockpit.js"></script>
  <script type="text/javascript" src="js/app.js"></script>
 
