--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -48,10 +48,13 @@
 
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
+  <script type='text/javascript' src="socket.io/socket.io.js"></script>  
   <script type='text/javascript' src='js/message-manager.js'></script>
+  <script type='text/javascript' src='js/eventEmitterStoreAndForward.js'></script>
+  <script type='text/javascript' src='js/SocketIOStoreAndForward.js'></script>
   <script type='text/javascript' src="js/cockpit.js"></script>
   <script type='text/javascript' src="config.js"></script>
-  <script type='text/javascript' src="socket.io/socket.io.js"></script>
+
 
 
   <% for(var i=0; i<scripts.length; i++) {%>
