--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -48,11 +48,12 @@
 
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
-  <script type='text/javascript' src="socket.io/socket.io.js"></script>  
+  <script type='text/javascript' src="socket.io/socket.io.js"></script>
   <script type='text/javascript' src='js/message-manager.js'></script>
   <script type='text/javascript' src='js/eventEmitterStoreAndForward.js'></script>
   <script type='text/javascript' src='js/SocketIOStoreAndForward.js'></script>
   <script type='text/javascript' src="js/cockpit.js"></script>
+   <script type="text/javascript" src="js/app.js"></script>
   <script type='text/javascript' src="config.js"></script>
 
 
