theme_r2 dynamic layout support child components
Added a content property and style property to the object definition.
The system with automatically load all of the object definitions in the
content array.

--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -20,6 +20,7 @@
     <script>
       window.Polymer = window.Polymer || {};
       window.Polymer.dom = 'shadow';
+      window.openrovtheme = 'classic-ui';
     </script>
     <link rel="import" href="components/polymer/polymer.html">
     <link rel="import" href="components/orov-behavior.html"> <!--for orov webcontrols -->
