--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -51,13 +51,15 @@
   <script type='text/javascript' src='js/SocketIOStoreAndForward.js'></script>
   <script type='text/javascript' src="js/cockpit.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
-
-
+  <script type="text/javascript" src="plugin/new-ui/js/lib/0_jquery.svg.min.js"></script>
+  <script type="text/javascript" src="plugin/new-ui/js/lib/1_jquery.svgdom.min.js"></script>
+  <script type="text/javascript" src="plugin/new-ui/js/lib/2_jquery.svganim.min.js"></script>
 
   <script type="text/javascript" src="components/webcomponentsjs/webcomponents-lite.js"></script>
   <script>
     window.Polymer = window.Polymer || {};
     window.Polymer.dom = 'shadow';
+    window.openrovtheme = 'new-ui';
   </script>
   <link rel="import" href="components/polymer/polymer.html">
   <link rel="import" href="components/orov-behavior.html"> <!--for orov webcontrols -->
@@ -183,5 +185,4 @@
       </div> <!--Placeholder for the UI plugin-->
 </template>
   </body>
-  <script type='text/javascript' src="plugin/new-ui/js/view_index.js"></script>
 </html>
