All new-ui switches working
Changed the API pattern of all calls to the state pattern.
Added back the lights service

--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -141,7 +141,7 @@
                 <div class="center">
                   <h4>{{__('Time')}}</h4>
                   <div id="newui-time" class="center control">
-                    <newui-time></newui-time>
+                    <orov-newui-time event-emitter="{{cockpit-event-emitter}}"></orov-newui-time>
                   </div>
                 </div>
               </div>
