Removed classing css

--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -16,9 +16,7 @@
     <link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="themes/OpenROV/css/style.css">
     <!--link href="components/jquery/css/ui-lightness/jquery-ui-1.8.23.custom.css" rel="stylesheet" /-->
-    <% for(var i=0; i<styles.length; i++) {%>
-    <link rel="stylesheet" href="<%= styles[i] %>"><% } %>
-    <link rel="import" type="css" href="plugin/new-ui/css/style.css">
+    <link rel="stylesheet" href="plugin/new-ui/css/style.css">
 
   </head>
 
