--- a/src/plugins/classic-ui/index.ejs
+++ b/src/plugins/classic-ui/index.ejs
@@ -10,8 +10,6 @@
     <script type='text/javascript' src="js/no-scroll-fullscreen-viewport.js"></script>
 
     <title><%= title %></title>
-    <% for(var i=0; i<styles.length; i++) {%>
-    <link rel="stylesheet" href="<%= styles[i] %>"><% } %>
 
     <script type='text/javascript' src="system-plugin/globalization/js/initGlobalization.js"></script>
     <script type='text/javascript' src='js/utilities.js'></script>
@@ -25,7 +23,7 @@
     <link rel="import" href="components/polymer/polymer.html">
     <link rel="import" href="components/orov-behavior.html"> <!--for orov webcontrols -->
 
-    <link rel="import" href="components/mjpeg-video-webcomponents/mjpeg-video.html">
+    <link rel="import" href="components/video/orov-video.html">
     <link rel="import" href="components/navigation-data/orov-horizon.html">
     <link rel="import" href="components/drop-in-dialog/drop-in-dialog.html">
     <link rel="import" href="components/menu/menu.html">
@@ -33,6 +31,8 @@
     <link rel="import" href="components/connection-health/orov-ping-graph.html">
     <link rel="import" href="components/serial-monitor/orov-serial-monitor.html">
     <link rel="import" href="components/telemetry/orov-telemetry-monitor.html">
+    <link rel="import" href="components/telemetry/telemetry-item.html">
+    <link rel="import" href="components/controllerboard2x/orov-time.html">
     <link rel="import" href="components/connection-health/orov-connection-health.html">
     <link rel="import" href="components/camera-tilt/orov-servo-tilt.html">
     <link rel="import" href="components/externallights/orov-external-brightness-indicator.html">
@@ -422,7 +422,7 @@
         <!--        <rov-video>
                 </rov-video>
         -->
-                <mjpeg-video id="camera1" border='1' style='width: 100%; height:100%' menuState='on' src={{video_source}}></mjpeg-video>
+                <orov-video id="camera1" border='1' style='width: 100%; height:100%'event-emitter="{{cockpit-event-emitter}}"></orov-video>
                 <orov-rov-horizon id="horizon"  event-emitter="{{cockpit-event-emitter}}"></orov-rov-horizon>
 
               </div>
@@ -437,10 +437,14 @@
         <div id="footer" class="navbar navbar-inverse navbar-fixed-bottom nav-collapse collapse visible-desktop">
           <div class="navbar-inner">
             <div id="footercontent" class="container-fluid" style="height: 100%">
-              <orov-rov-thrustfactor class="pull-left"  event-emitter="{{cockpit-event-emitter}}"></orov-rov-thrustfactor>
+              <orov-thrustfactor class="pull-left"  event-emitter="{{cockpit-event-emitter}}"></orov-thrustfactor>
               <orov-connection-health class="pull-left"  event-emitter="{{cockpit-event-emitter}}"></orov-connection-health>
-              <orov-rov-topdowncompass class="pull-left" event-emitter="{{cockpit-event-emitter}}"></orov-rov-topdowncompass>
-              <bb-ping class="pull-left"></bb-ping>
+              <orov-topdowncompass class="pull-left" event-emitter="{{cockpit-event-emitter}}"></orov-topdowncompass>
+              <orov-ping-graph class="pull-left" event-emitter="{{cockpit-event-emitter}}"></orov-ping-graph>
+              <orov-telemetry-item class="pull-right" telemetry-item="iout" event-emitter="{{cockpit-event-emitter}}"></orov-telemetry-item>
+              <orov-telemetry-item class="pull-right" telemetry-item="vout" event-emitter="{{cockpit-event-emitter}}"></orov-telemetry-item>
+              <orov-telemetry-item  class="pull-right" telemetry-item="cpu" event-emitter="{{cockpit-event-emitter}}"></orov-telemetry-item>
+              <orov-time  class="pull-right" event-emitter="{{cockpit-event-emitter}}"></orov-time>
               <capestatus-footer class="pull-right"></capestatus-footer>
             </div>
           </div>
@@ -481,5 +485,4 @@
     </div> <!--Placeholder for the UI plugin-->
 
   </body>
-  <script type='text/javascript' src="js/view_index.js"></script>
 </html>
